# terra

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  validate-terraform.yml
backend/: .gitignore  deploy.sh  pyproject.toml
backend/src/handlers/: api.py  photo_processor.py  photos.py  reports.py
backend/src/utils/: db.py  response.py
backend/tests/: test_api.py  test_photos.py  test_reports.py  test_response.py
db/: 001_initial_schema.sql  002_drop_building_id_add_s2_id.sql  generate_seed.py  seed.sql  seed_teardown.sql
docs/: api-reference.md  offline-connectivity-scenarios.md  report-submission-flow.md
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: offline-map.spec.ts  report-submission.spec.ts
frontend/src/: app.module.css  app.tsx  main.tsx  sw.ts
frontend/src/components/: building-selection.module.css  building-selection.tsx  damage-classification.module.css  damage-classification.tsx  dashboard-map.module.css  dashboard-map.tsx  dashboard-sidebar.module.css  dashboard-sidebar.tsx  layout.module.css  layout.tsx  map.module.css  map.tsx  multi-select.module.css  multi-select.tsx  photo-capture.module.css  photo-capture.tsx  report-flow.module.css  report-flow.tsx  submission-confirmation.module.css  submission-confirmation.tsx  survey-form.module.css  survey-form.tsx
infra/: api_gateway.tf  bootstrap.sh  cloudfront.tf  github_oidc.tf  lambda.tf  providers.tf  s3.tf  ssm.tf  variables.tf
(+9 files in other folders)
