[project]
name = "terra-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[all]>=3.0",
    "psycopg2-binary>=2.9",
    "h3>=4.0",
    "shapely>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "boto3>=1.35",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
